--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
 		"tailwindcss": "^3.3.1",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"animejs": "^3.2.1"
+	}
 }
