--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-netlify": "^2.0.6",
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
@@ -29,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"animejs": "^3.2.1"
+		"animejs": "^3.2.1",
+		"sveltekit-image": "^0.5.13"
 	}
 }
