--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"type": "module",
 	"dependencies": {
 		"animejs": "^3.2.1",
+		"svelte-inview": "^4.0.0",
 		"sveltekit-image": "^0.5.13"
 	}
 }
