--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-netlify": "^2.0.6",
-		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.3",
@@ -30,8 +29,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"animejs": "^3.2.1",
-		"svelte-inview": "^4.0.0",
-		"sveltekit-image": "^0.5.13"
+		"@unpic/svelte": "^0.0.21",
+		"svelte-inview": "^4.0.0"
 	}
 }
